src/objects/LOG_LogMessageSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>LOG_LogMessageSettings</description>
    <fields>
        <fullName>LOG_Debug__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True – log debug messages in this org 
Otherwise - False</description>
        <inlineHelpText>If True – log debug messages in this org 
Otherwise - False</inlineHelpText>
        <label>Debug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOG_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True – log errors in this org 
Otherwise - False</description>
        <inlineHelpText>If True – log errors in this org 
Otherwise - False</inlineHelpText>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOG_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True – log info messages in this org 
Otherwise - False</description>
        <inlineHelpText>If True – log info messages in this org 
Otherwise - False</inlineHelpText>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOG_Log_Purge__c</fullName>
        <defaultValue>360</defaultValue>
        <description>Log Purge (Days) - The number of days of logs to keep</description>
        <inlineHelpText>Log Purge (Days) - The number of days of logs to keep</inlineHelpText>
        <label>Log Purge</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LOG_Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If True – log Warning messages in this org 
Otherwise - False</description>
        <inlineHelpText>If True – log Warning-level messages in this org 
Otherwise - False</inlineHelpText>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <label>LOG_LogMessageSettings</label>
</CustomObject>